# VMTutorial

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py
VM/: CMakeBoostSetup.txt  CMakeCFlagsSetup.txt  CMakeCache.txt  CMakeLists.txt  CMakeSRCSetup.txt  CMakeSubmodule.txt  CMakeVTKSetup.txt  pyproject.toml  setup.py
VM/src/: CMakeLists.txt  box.cpp  class_factory.hpp  constrainer.hpp  constraint.hpp  constraint_fixed.hpp  dump.cpp  dump.hpp  force.hpp  force_area.cpp  force_area.hpp  force_compute.hpp  force_perimeter.cpp  force_perimeter.hpp  force_self_propulsion.cpp  force_self_propulsion.hpp  integrate.cpp  integrate.hpp  integrator_brownian.cpp  integrator_brownian.hpp  mesh.hpp  property.hpp  rng.cpp  rng.hpp  simulation.cpp  simulation.hpp  system.cpp  system.hpp  topology.cpp  topology.hpp  types.hpp  vec.hpp
VMToolkit/VM/: CMakeBoostSetup.txt  CMakeCFlagsSetup.txt  CMakeLists.txt  CMakeSRCSetup.txt  CMakeSubmodule.txt  CMakeVTKSetup.txt  __init__.py
VMToolkit/VM/src/: CMakeLists.txt  base_property.hpp  box.hpp  constraint.hpp  constraint_none.hpp  dump.cpp  dump.hpp  force.hpp  force_area.cpp  force_area.hpp  force_compute.cpp  force_compute.hpp  force_perimeter.cpp  force_perimeter.hpp  force_self_propulsion.cpp  force_self_propulsion.hpp  integrate.cpp  integrate.hpp  integrator.hpp  integrator_brownian.cpp  integrator_brownian.hpp  matrix.cpp  matrix.hpp  mesh.hpp  property.hpp  simulation.cpp  simulation.hpp  system.cpp  system.hpp  topology.cpp  topology.hpp  vec.cpp  vec.hpp  version.hpp.in
VMToolkit/VMAnalysis/: __init__.py
VMToolkit/VMAnalysis/Graner/: BTensor.py  BasicStatistics.py  MTensor.py  MyoTensor.py  TTensor.py  TensionTensor.py  Tensor.py  UTensor.py  VTensor.py  __init__.py
VMToolkit/VMAnalysis/utils/: __init__.py
VMToolkit/VMAnalysis/utils/HalfEdge/: Box.py  Edge.py  Face.py  HalfEdge.py  Mesh.py  Tensor.py  Vec.py  Vertex.py  __init__.py
config_builder/open/: CellList2D.py  cell.py  honeycomb_lattice.py  make_honeycomb.py  vertex.py
config_builder/periodic/: CellList2D.py  cell.py  make_hexagonal.py  make_mesh.py  make_random.py  make_relaxed_random.py  random_lattice.py  triangular_lattice.py  vertex.py  voro_lattice.py
examples/RandomRelax/: random_conf.json  random_relax.ipynb  run.py  tissue_plot.py
examples/SelfPropelled/: random_normal_sp.json  run.py  self_propelled.ipynb  tissue_plot.py
examples/TissueStretch/: honeycomb.json  run.py  tissue_plot.py  tissue_stretch.ipynb
